adding second embeddedv ideo

--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h2 class="card-title">Mars Rover Senior Design Project</h2>
-                    <p class="card-text"><strong>Technologies:</strong> C++, C#, SolidWorks, Microcontrollers</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Designed and implemented inverse kinematic controls for a robotic arm, allowing for efficient real-time operation.</li>
-                        <li class="list-group-item">Enhanced micro-controller software, reducing latency by 30% through integrating serial communication with ROS.</li>
-                        <li class="list-group-item">Worked with team to design a novel 6-axis robotic arm using worm-gears and linear rail actuation in SolidWorks.</li>
-                    </ul>
+                    
+                    <div class="video mt-4">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                     
                 </div>
             </div>
