adding autoplay and mute

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating the precision of rate table dynamics analysis.</li>
                     </ul>
                     <div class="video mt-4">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/piLDwxnZShw?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
