--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h2 class="card-title"><a href="mars_rover.html" class="text-decoration-none">Mars Rover Senior Design Project</a></h2>
+                    <div class="video mt-4">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
             </div>
         </section>
