adding new clickable html

--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h2 class="card-title">UAV RRT* Path Planner</h2>
-                    <p class="card-text"><strong>Technologies:</strong> ROS2, Python, Controls</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Developed a Python UAV simulator with frame transformations and accurate force simulations for performance analysis.</li>
-                        <li class="list-group-item">Implemented the RRT* algorithm to enhance the UAV's 2-D pathfinding capabilities over the standard RRT algorithm.</li>
-                        <li class="list-group-item">Conducted extensive testing to validate the planner's efficiency and reliability across various scenarios.</li>
-                    </ul>
+                    <h2 class="card-title"><a href="rrt_planner.html" class="text-decoration-none">UAV RRT* Path Planner</a></h2>
+                    <div class="video mt-4">
+                        <img src="media/rrt.gif" alt="RRT Planner Animation" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </section>
