--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
-            <h1 class="display-4">My Projects Portfolio</h1>
-            <p class="lead">Showcasing my work in robotics, control systems, and data science.</p>
+        <h1 class="display-4">Timothy Dodge</h1>
+            <p class="lead">I am Timothy Dodge, an engineer with a passion for robotics, control systems, and data science. My experience spans from microdrones and reinforcement learning to energy optimization and hardware development. Welcome to my portfolio, where I showcase some of my key projects and contributions.</p>
         </div>
     </header>
 
