--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
         <section class="project mb-5">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <h2 class="card-title">Epsilon Point Controller</h2>
-                    <p class="card-text"><strong>Technologies:</strong> Nonlinear Controls, Python, Numpy, ROS2, Gazebo</p>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Engineered a controller for a smooth differential drive robot to track nonlinear and time-varying trajectories.</li>
-                        <li class="list-group-item">Optimized controller for Turtlebot3 platform, respecting velocity constraints by applying LQR techniques.</li>
-                        <li class="list-group-item">Streamlined control system, achieving convergence to the true trajectory within 2 seconds of receiving a new signal.</li>
-                    </ul>
+                    <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon Point Controller</a></h2>
+                    <div class="video mt-4">
+                        <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </section>
+
 
         <section class="project mb-5">
             <div class="card shadow-sm">
